@@ -1,6 +1,6 @@
 {
   "name": "simp-pupmod",
-  "version": "7.5.0",
+  "version": "7.6.0",
   "author": "SIMP Team",
   "summary": "A puppet module to manage puppetserver and puppet agents",
   "license": "Apache-2.0",
